Bug 341499: The assert in js_NewGCThing about not running GC now takes into account that we allow allocation from close hooks. r=mrbkap